-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: repo-valhalla
-
Component/s: core-libs
-
None
When --enable-preview is true, the patching of some java.base classes as value classes disables CDS. Subsequently the CDS tests fail.
For example,
runtime/cds/appcds/redefineClass/RedefineRunningMethods_Shared.java
`Error occurred during initialization of VM
Cannot use the following option when dumping the shared archive: --patch-module`
For example,
runtime/cds/appcds/redefineClass/RedefineRunningMethods_Shared.java
`Error occurred during initialization of VM
Cannot use the following option when dumping the shared archive: --patch-module`