8304168: [lworld] CDS tests fail with --enable-preview patched value classes